# alnicko-rapidreach-fw

./: .device-server.start  .gitignore  AUDIO_CHUNKING_TODO.md  AUDIO_NOISE_DIAGNOSIS.md  AUDIO_SYNC_STRATEGIES.md  CMakeLists.txt  COMPARISON_WITH_COMMIT_3C0B007.md  COMPLETE_AUDIO_FIX_SUMMARY.txt  DEBUGGING_GUIDE.md  DEBUG_REBOOT_ISSUE.md  DEBUG_SPEAKER_BOARD.md  DECODE_TIME_MEASUREMENT_FIX.md  DEV-QUICKSTART.md  DOCKER_STACK.md  FILESYSTEM_HANG_ANALYSIS.md  FINAL_STATUS.txt  FIRMWARE_UPDATE_192.168.2.79.md  FIRMWARE_UPDATE_SUMMARY.md  GPTP_VS_SNTP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  Kconfig  LOG_OPTIMIZATION_SUMMARY.md  MODEM_BUFFER_OPTIMIZATION.md  MQTT_AUDIO_CONSTRAINTS.md  MQTT_CLIENTS_ARCHITECTURE.md  MQTT_DEBUG_CHECKLIST.md  MQTT_FALLBACK_BROKER_FIX.md  MQTT_FILE_TRANSFER_FIXES_SUMMARY.md  MQTT_PHANTOM_MESSAGE_FIX.md  NETWORK_PRIORITY.md  OPUS_DEBUGGING_CHECKLIST.md  OPUS_DECODING_ANALYSIS.md  OPUS_DECODING_FIXES_SUMMARY.md  OPUS_FIX_QUICK_REFERENCE.txt  README-AI.md  README-SECRETS.md  README.md  REVERTED_TO_V0.0.1_ANALYSIS.md  SECRETS.md  SERIAL_CONSOLE_DEBUG.md  (+48 more)
src/: CMakeLists.txt  Kconfig.rapidreach
src/audio_player/: CMakeLists.txt  Kconfig.audio  audio_player.c  audio_player.h  opus_interface.c  opus_interface.h
src/battery/: CMakeLists.txt  Kconfig.battery  battery.c  battery.h
src/charger/: CMakeLists.txt  Kconfig.charger  charger.c  charger.h
src/cli/: CMakeLists.txt  Kconfig.cli  cli_module.c  cli_utils.c  cli_utils.h
src/dev_info/: CMakeLists.txt  Kconfig.dev_info  dev_info.c  dev_info.h
src/device_registry/: CMakeLists.txt  Kconfig.device_registry  device_registry.c  device_registry.h
src/dfu_manager/: CMakeLists.txt  Kconfig.dfu  dfu_manager.c  dfu_manager.h
src/ethernet/: CMakeLists.txt  Kconfig.ethernet  ethernet.c  ethernet.h
src/examples/: CMakeLists.txt  Kconfig.examples  alnicko_server.c  alnicko_server.h  alnicko_shell.c  domain_logic.c  domain_logic.h  power_supervisor.c  power_supervisor.h  test_mqtt_wrapper.c
src/file_manager/: CMakeLists.txt  Kconfig.file  file_manager.c  file_manager.h
src/http_log_client/: CMakeLists.txt  Kconfig  README.md  http_log_client.c  http_log_client.h  http_log_shell.c
src/http_module/: CMakeLists.txt  Kconfig.http  http_module.c  http_module.h
src/init_state_machine/: CMakeLists.txt  Kconfig.init_sm  init_state_machine.c  init_state_machine.h  shell_mqtt_monitor.c  shell_mqtt_monitor.h
src/led_control/: CMakeLists.txt  Kconfig.led  led_control.c  led_control.h
src/log_settings/: CMakeLists.txt  Kconfig  log_settings.c  log_settings.h  log_settings_shell.c
src/main/: main.c  shell_keepalive.c  shell_keepalive.h
src/microphone/: CMakeLists.txt  Kconfig.microphone  microphone.c  microphone.h
src/modem/: CMakeLists.txt  Kconfig.modem  modem_module.c  modem_module.h
src/mqtt_log_client/: CMakeLists.txt  Kconfig.mqtt_log  log_backend_mqtt.c  mqtt_log_client.c  mqtt_log_client.h
src/mqtt_module/: CMakeLists.txt  Kconfig.mqtt  Kconfig.mqtt_wrapper  MQTT_RELIABILITY_IMPROVEMENTS.md  README.md  (+22 more)
(+245 files in other folders)
