add_subdirectory(modem)
add_subdirectory(examples)
add_subdirectory(battery)
add_subdirectory(charger)
add_subdirectory(watchdog)
add_subdirectory(microphone)
add_subdirectory(cli)
add_subdirectory(led_control)
add_subdirectory(audio_player)
add_subdirectory(dev_info)
add_subdirectory(poweroff)
add_subdirectory(switch_module)
add_subdirectory(ethernet)
add_subdirectory(http_module)
add_subdirectory(file_manager)
add_subdirectory(dfu_manager)
add_subdirectory(wifi)
add_subdirectory(mqtt_module)
add_subdirectory(rtc)
add_subdirectory(system_watchdog)