add_subdirectory(modem)
add_subdirectory(examples)
add_subdirectory(battery)
add_subdirectory(charger)
add_subdirectory(watchdog)
add_subdirectory(microphone)
add_subdirectory(cli)
add_subdirectory(led_control)
add_subdirectory(audio_player)
add_subdirectory(dev_info)
add_subdirectory(poweroff)
add_subdirectory(switch_module)
add_subdirectory(ethernet)
add_subdirectory(http_module)
add_subdirectory(file_manager)
add_subdirectory(dfu_manager)
add_subdirectory(wifi)
add_subdirectory(mqtt_module)
add_subdirectory_ifdef(CONFIG_RPR_MQTT_LOG_CLIENT mqtt_log_client)
add_subdirectory(rtc)
add_subdirectory_ifdef(CONFIG_RPR_MODULE_DEVICE_REGISTRY device_registry)
add_subdirectory_ifdef(CONFIG_RPR_MODULE_INIT_SM init_state_machine)
add_subdirectory(system_watchdog)
add_subdirectory_ifdef(CONFIG_HTTP_LOG_CLIENT http_log_client)
add_subdirectory_ifdef(CONFIG_LOG_SETTINGS log_settings)